<resources>
    <string name="app_name">MyContacts</string>

    <string name="welcome_label">Welcome to MyContacts!</string>
    <string name="addContact_button">Add contact</string>
    <string name="selectContact_button">Select contact</string>
    <string name="addContact_label">Add a new contact</string>
    <string name="name_label">Name</string>
    <string name="phone_label">Phone</string>
    <string name="email_label">Email</string>
    <string name="address_label">Address</string>
    <string name="ok_label">OK</string>
    <string name="added_message">Added</string>
    <string name="comma_label">, </string>
    <string name="colon_label"> : </string>

    <string name="title_activity_add_contact">Add contact</string>
    <string name="title_activity_show_contact">Contacts</string>
    <string name="title_activity_my_contacts">MyContacts</string>

    <string name="action_settings">Action settings</string>
</resources>
